--- a/css/createnewgroup.css
+++ b/css/createnewgroup.css
@@ -19,11 +19,11 @@ body {
     padding: 7px;
     background-color: #e8a973;
     font-weight: bold;
-    height: 75px;
+    height: 55px;
 }
 #tab-table {
     width: 100%;
-    padding: 60px 0 110px 0;
+    padding: 45px 0 110px 0;
 }
 #control-panel {
     display: flex;
@@ -41,8 +41,8 @@ body {
     justify-content: center;
 }
 .icon {
-    width: 55px;
-    height: 55px;
+    width: 45px;
+    height: 45px;
     padding-right: 10px;
 }
 .page-title {
@@ -60,13 +60,15 @@ body {
 .color-grid {
     display: grid;
     background-color: black;
-    padding: 5px;
+    padding: 7px;
     gap: 5px;
     grid-template-columns: repeat(5, 1fr);
 }
 .color-tile {
-    width: 30px;
-    height: 30px;
+    position: relative;
+    top: 0;
+    width: 35px;
+    height: 35px;
     max-width: 60px;
     cursor: pointer;
     transform: rotate(0deg);
@@ -74,6 +76,8 @@ body {
 .color-tile:hover {
     transform: rotate(7deg);
     transition: transform .5s;
+    transition: top 1s;
+    top: -10px;
 }
 .color-grey {
     background-color: #CDCED0;
@@ -101,6 +105,15 @@ body {
 }
 .color-orange {
     background-color: #FEAE6F;
+}
+.color-random {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: black;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
 }
 .tab-table-controls {
     width: 100%;
