--- a/css/createnewgroup.css
+++ b/css/createnewgroup.css
@@ -147,6 +147,10 @@ td, th {
     padding: 8px;
     text-align: center;
 }
+.cell-overflow {
+    overflow-x: scroll;
+    max-width: 200px;
+}
 .tab-icon {
     width: 40px;
     height: 40px;
