--- a/css/createnewgroup.css
+++ b/css/createnewgroup.css
@@ -141,11 +141,18 @@ th {
     font-size: 14px;
     background-color: #f5d0ac;
 }
+tr.group {
+    background: red !important;
+}
 td, th {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
     text-align: center;
+}
+td.small-col, th.small-col {
+    max-width: 10px;
+    overflow-x: scroll;
 }
 .cell-overflow {
     overflow-x: scroll;
